# space-station

./: README.md  compose.yaml  names.csv  pyproject.toml  rabbit_sender.py
.github/workflows/: publish_image.yml
.workflows/: publish_image.yml
docker/: Dockerfile-app
kubernetes/: app.yml  postgres.yml  rabbitmq.yml  secret.yml
space_station/: db.py  main.py  models.py  rabbit.py
